--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,13 @@
 div.swiper-wrapper {
 	min-height: 500px;
 }
+
+html {
+	scroll-behavior: smooth;
+}
+
+@media screen and (max-width: 768px) {
+	div.swiper-wrapper {
+		min-height: 385px;
+	}
+}
